# netstats

./: .gitignore  Cargo.toml  README.md  main.py
netstats/: .gitignore
netstats/netstats_core/src/: anomalies.rs  benchmark.rs  metrics.rs  network.rs  packet.rs  reporter.rs
netstats/netstats_core/templates/: report_template.html
netstats/src/: main.rs
netstats_core/: Cargo.toml
netstats_core/src/: anomalies.rs  config.rs  lib.rs  metrics.rs  network.rs  reporter.rs
netstats_core/templates/: report_template.html
netstats_core/tests/: integration_test.rs
src/: __init__.py  analysis.py  packet_handler.py  tcp_client.py  tcp_server.py  udp_client.py  udp_server.py  utils.py
tests/: __init__.py  test_packet_handler.py  test_utils.py
ui/: appwindow.slint
