[package]
name = "netstats_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] } # For async networking, time, etc.
serde = { version = "1.0", features = ["derive"] } # For packet serialization (optional, if used)
bincode = "1.3" # For binary serialization (optional, if used)
humantime = "2.1" # For formatting timestamps in reports
rand = "0.8" # For random packet size generation
askama = "0.12" # For HTML templating
askama_shared = "0.12" # Required by askama
serde_json = "1.0" # For serializing data for JavaScript charts
# Add other core dependencies here later.
